--- a/MedidorModel/MedidorModel.csproj
+++ b/MedidorModel/MedidorModel.csproj
@@ -46,7 +46,7 @@
     <Compile Include="DAL\LecturasDALObjetos.cs" />
     <Compile Include="DAL\MedidorDALObjetos.cs" />
     <Compile Include="DTO\Lectura.cs" />
-    <Compile Include="DTO\Medidor.cs" />
+    <Compile Include="DTO\MedidorObj.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
